--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+#Mudança para docker compose
 DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
