--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,25 @@
-version: "3"
+version: '3'
 services:
-  minnemi-back-app:
+  minnemi-backend:
     build:
       context: .
       dockerfile: Dockerfile
-    volumes:
-      - .:/var/www/html
     ports:
       - 8080:80
+    volumes:
+      - .:/var/www/html
     depends_on:
       - mysql
 
   mysql:
     image: mysql:latest
+    ports:
+      - 3306:3306
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
       MYSQL_DATABASE: ${DB_DATABASE}
     volumes:
-      - mysql-data:/var/lib/mysql
+      - mysql_data:/var/lib/mysql
 
 volumes:
-  mysql-data:
+  mysql_data:
