--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -35,3 +35,12 @@ jobs:
         DB_CONNECTION: sqlite
         DB_DATABASE: database/database.sqlite
       run: vendor/bin/phpunit
+
+  deploy: 
+   runs-on: ubuntu-latest
+   needs: laravel-tests
+   if: github.ref == 'refs/heads/ci/tests' 
+   steps:
+    - uses: actions/checkout@v2
+    - uses: superfly/flyctl-actions/setup-flyctl@master
+    - run: flyctl deploy
