--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -43,6 +43,8 @@ jobs:
    steps:
     - uses: actions/checkout@v2
     - uses: superfly/flyctl-actions/setup-flyctl@master
+      with: 
+        version: 0.1.53
     - run: flyctl deploy
       env:
         FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
